# docs/swagger.yaml
@@ -20,6 +20,17 @@ definitions:
       title:
         type: string
     type: object
+  model.CreateTodoParam:
+    properties:
+      activity_group_id:
+        type: integer
+      priority:
+        type: string
+      title:
+        type: string
+    required:
+    - activity_group_id
+    type: object
   model.HttpErrorResponse:
     properties:
       message:
@@ -38,6 +49,17 @@ definitions:
           $ref: '#/definitions/model.Activities'
         type: array
     type: object
+  model.ListTodosResponse:
+    properties:
+      message:
+        type: string
+      status:
+        type: string
+      value:
+        items:
+          $ref: '#/definitions/model.Todos'
+        type: array
+    type: object
   model.SingleActivityResponse:
     properties:
       message:
@@ -46,6 +68,43 @@ definitions:
         type: string
       value:
         $ref: '#/definitions/model.Activities'
+    type: object
+  model.SingleTodoResponse:
+    properties:
+      message:
+        type: string
+      status:
+        type: string
+      value:
+        $ref: '#/definitions/model.Todos'
+    type: object
+  model.Todos:
+    properties:
+      activity_group_id:
+        type: integer
+      created_at:
+        type: string
+      id:
+        type: integer
+      is_active:
+        type: boolean
+      priority:
+        type: string
+      title:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  model.UpdateTodoParam:
+    properties:
+      activity_group_id:
+        type: integer
+      is_active:
+        type: boolean
+      priority:
+        type: string
+      title:
+        type: string
     type: object
   model.WebResponse:
     properties:
@@ -201,7 +260,7 @@ paths:
         name: id
         required: true
         type: integer
-      - description: Add Activities
+      - description: Update Activity
         in: body
         name: activity
         required: true
@@ -229,6 +288,173 @@ paths:
       summary: update an activity
       tags:
       - activity
+  /todo-items:
+    post:
+      consumes:
+      - application/json
+      description: create an todo for parent of items
+      parameters:
+      - description: Add Todo to activity
+        in: body
+        name: todo
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateTodoParam'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.SingleTodoResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+      summary: create an todo
+      tags:
+      - todo
+  /todo-items/{activity_group_id}:
+    get:
+      description: get list all of existing todos
+      parameters:
+      - description: activity_group_id
+        in: path
+        name: activity_group_id
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.ListTodosResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+      summary: get all todos
+      tags:
+      - todo
+  /todo-items/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a todo for parent of items
+      parameters:
+      - description: todo id to delete
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.WebResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+      summary: Delete a todo
+      tags:
+      - todo
+    get:
+      consumes:
+      - application/json
+      description: Get a todo for parent of items
+      parameters:
+      - description: todo id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.SingleTodoResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+      summary: Get a todo
+      tags:
+      - todo
+    patch:
+      consumes:
+      - application/json
+      description: update an todo
+      parameters:
+      - description: id of todo
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update Todo Param
+        in: body
+        name: todo
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdateTodoParam'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.SingleTodoResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.HttpErrorResponse'
+      summary: update an todo
+      tags:
+      - todo
 securityDefinitions:
   BasicAuth:
     type: basic
